objects/Blockchain__x.object
<CustomObject>
    <description>Blockchain</description>
    <externalDataSource>Blockchain</externalDataSource>
    <externalName>Blockchain</externalName>
    <fields>
        <fullName>TransactionId__c</fullName>
        <externalDeveloperName>transactionId</externalDeveloperName>
        <label>transactionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>class__c</fullName>
        <label>class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>description</description>
        <externalDeveloperName>description</externalDeveloperName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>identityUsed__c</fullName>
        <description>identityUsed</description>
        <externalDeveloperName>identityUsed</externalDeveloperName>
        <label>identityUsed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modifiedDate__c</fullName>
        <description>modifiedDate</description>
        <externalDeveloperName>modifiedDate</externalDeveloperName>
        <label>modifiedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selfLink__c</fullName>
        <description>selfLink</description>
        <externalDeveloperName>selfLink</externalDeveloperName>
        <label>selfLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <description>title</description>
        <externalDeveloperName>title</externalDeveloperName>
        <label>title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionInvoked__c</fullName>
        <label>transactionInvoked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionTimestamp__c</fullName>
        <description>transactionTimestamp</description>
        <externalDeveloperName>transactionTimestamp</externalDeveloperName>
        <label>transactionTimestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionType__c</fullName>
        <description>transactionType</description>
        <externalDeveloperName>transactionType</externalDeveloperName>
        <label>transactionType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Blockchain</label>
    <listViews>
        <fullName>All</fullName>
        <columns>transactionTimestamp__c</columns>
        <columns>identityUsed__c</columns>
        <columns>ExternalId</columns>
        <columns>class__c</columns>
        <columns>transactionType__c</columns>
        <columns>transactionInvoked__c</columns>
        <columns>TransactionId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Blockchain</pluralLabel>
</CustomObject>